packages/bs-templates/templates/modal/_modal.scss
.popup-overlay {
  background: rgba(0, 0, 0, 0.62);
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 3000;

  .popup-content {
    padding: 1em 2em 2em;
  }

  label {
    border-radius: 2px 0 0 2px;
    color: $oa-gray;
  }

  section {

    background: $oa-gray-lighter;
    max-width: 500px;

    position: fixed;
    top: 40%;
    left: 50%;

    /* bring your own prefixes */
    transform: translate(-50%, -50%);

  }

  &.big {

    section {

      overflow-y: scroll;
      max-height: 90%;
      margin-top: 15%;
      background: $oa-white;

      i {
        color: inherit;
      }

    }

  }

  textarea {
    resize: vertical;
  }

  .btn-submit {
    width: 100%;
  }

  .legend {
    margin: 10px 0 5px;
  }

  .popup-title {
    background-color: $oa-blue;
    border-radius: 3px 3px 0 0;
    color: $oa-white;
    display: block;
    padding: 10px 2em;
    text-align: left;
    width: 100%;

    h2 {
      font-size: 16px;
      line-height: 20px;
      margin: 0;
    }

    .close-link {
      color: $oa-white;
      line-height: 40px;
      padding: 0 10px;
      position: absolute;
      right: 0;
      top: 0;
      vertical-align: middle;
      cursor: pointer;
    }
  }

  .preview {
    border: 1px solid $oa-silver;
    display: block;
    margin-top: -1px;
    padding: 10px;
  }

  .preview-title {
    font-size: 14px;
    margin: 0;
    padding: 0;
  }

  .preview-infos {
    color: $oa-silver;
  }

  @media (min-width: 768px) {

    section {
      border-radius: 3px;
      width: 38.2%;
    }

    &.big {

      section {

        margin-top: 10%;

      }

    }

  }

  @media (min-width: 1200px) {

    &.big {

      section {

        margin-top: 5%;

      }

    }

  }

}

